<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="media_btn">Медиатека</string>
    <string name="settings_btn">Настройки</string>
    <string name="new_playlist_btn">Новый плейлист</string>
    <string name="back_button">Назад</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_btn">Поделиться приложением</string>
    <string name="support_btn">Написать в поддержку</string>
    <string name="agreement_btn">Пользовательское соглашение</string>
    <string name="create_btn">Создать</string>

    <string name="share_message">practicum.yandex.ru/learn/android-developer/</string>
    <string name="support_email">devilreinatv@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search">Поиск</string>
    <string name="clear_search">Очистить</string>

    <string name="retry_btn">Обновить</string>

    <string name="text_error">Ничего не нашлось</string>
    <string name="internet_error">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>

    <string name="clear_history">Очистить историю</string>

    <string name="search_history">Вы искали</string>

    <string name="album_image_text">Обложка альбома</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="text_share">Share via</string>

    <string name="empty_favorite">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite">Избранные треки</string>
    <string name="playlist">Плейлисты</string>

    <string name="field_title">Название*</string>
    <string name="description_title">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="close_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="close_playlist_dialog_message">Все несохраненные данные будут потеряны</string>

    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>

    <plurals name="tracks_count">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <string name="title_dialog">Завершить создание плейлиста?</string>
    <string name="message_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel_dialog">Отмена</string>
    <string name="ok_dialog">Завершить</string>
    <string name="edit_album_text">Редактировать информацию</string>
    <string name="delete_playlist_text">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="create">Создать</string>
    <string name="create_playlist">Создать</string>
    <string name="no_tracks_album_text">В этом плейлисте пока нет треков.</string>

</resources>