<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:orientation="vertical"
    android:background="?attr/colorOnBackground">


    <LinearLayout
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_btn"
            style="@style/Title"
            />

    </LinearLayout>

    <!-- Остальная разметка для элементов настроек -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <!-- Темная тема -->

        <!-- Поделиться приложением -->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/SettingsText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_61"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/surface"
            app:switchMinWidth="58dp"
            app:trackTint="@color/switch_one"
            app:thumbTint="@color/switch_two"
            />

        <LinearLayout
            android:id="@+id/share_app_button"
            style="@style/SettingsItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SettingsText"
                android:layout_weight="1"
                android:text="@string/share_btn"
                android:textColor="@color/surface"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_share"/>
        </LinearLayout>

        <!-- Написать в поддержку -->
        <LinearLayout
            android:id="@+id/contact_support_button"
            style="@style/SettingsItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SettingsText"
                android:layout_weight="1"
                android:text="@string/support_btn"
                android:textColor="@color/surface"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_support"/>
        </LinearLayout>

        <!-- Пользовательское соглашение -->
        <LinearLayout
            android:id="@+id/user_agreement_button"
            style="@style/SettingsItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SettingsText"
                android:layout_weight="1"
                android:text="@string/agreement_btn"

                android:textColor="@color/surface"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_arrow_right"
                android:paddingHorizontal="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
