<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:background="@color/background"
        tools:context=".player.ui.PlayerActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginEnd="12dp"
                android:background="@drawable/ic_arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <ImageView
                android:id="@+id/albumImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/album_image_text"
                android:scaleType="centerCrop"
                android:layout_marginTop="32dp"
                android:src="@drawable/placeholder_player"
                app:layout_constraintTop_toBottomOf="@id/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:1" />

            <TextView
                android:id="@+id/trackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/playerTrackName"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/albumImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/playerArtistName"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/trackName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/addPlaylistButton"
                android:layout_width="@dimen/dp_51"
                android:layout_height="@dimen/dp_51"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/add_button"
                app:layout_constraintEnd_toStartOf="@+id/playButton"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/playButton" />

            <ImageButton
                android:id="@+id/playButton"
                android:layout_width="@dimen/dp_84"
                android:layout_height="@dimen/dp_84"
                android:background="@drawable/ripple_circular"
                android:src="@drawable/play_button"
                app:layout_constraintTop_toBottomOf="@id/artist"
                app:layout_constraintStart_toEndOf="@id/addPlaylistButton"
                app:layout_constraintEnd_toStartOf="@+id/likeButton"/>

            <ImageButton
                android:id="@+id/likeButton"
                android:layout_width="@dimen/dp_51"
                android:layout_height="@dimen/dp_51"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/like_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/playButton"
                app:layout_constraintTop_toTopOf="@id/playButton" />

            <TextView
                android:id="@+id/durationTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:gravity="center_horizontal"
                android:textColor="@color/surface"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playButton" />

            <TextView
                android:id="@+id/durationAttr"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:text="@string/duration"
                style="@style/attrStyle"
                app:layout_constraintTop_toBottomOf="@id/durationTime"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/durationValue"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                style="@style/attrValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/durationAttr"
                app:layout_constraintTop_toBottomOf="@id/durationTime" />

            <TextView
                android:id="@+id/albumAttr"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:text="@string/album"
                style="@style/attrStyle"
                app:layout_constraintTop_toBottomOf="@id/durationAttr"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/albumValue"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                style="@style/attrValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/albumAttr"
                app:layout_constraintTop_toBottomOf="@id/durationValue" />

            <TextView
                android:id="@+id/yearAttr"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:text="@string/year"
                style="@style/attrStyle"
                app:layout_constraintTop_toBottomOf="@id/albumAttr"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/yearValue"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                style="@style/attrValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/yearAttr"
                app:layout_constraintTop_toBottomOf="@id/albumValue" />

            <TextView
                android:id="@+id/genreAttr"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:text="@string/genre"
                style="@style/attrStyle"
                app:layout_constraintTop_toBottomOf="@id/yearAttr"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/genreValue"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                style="@style/attrValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/yearAttr"
                app:layout_constraintTop_toBottomOf="@id/yearValue" />

            <TextView
                android:id="@+id/countryAttr"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:text="@string/country"
                style="@style/attrStyle"
                app:layout_constraintTop_toBottomOf="@id/genreAttr"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                style="@style/attrValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/genreAttr"
                app:layout_constraintTop_toBottomOf="@id/genreValue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>


    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/add_track_to_playlist_background"
        app:behavior_hideable="true"
        android:backgroundTint="@color/black"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/topView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/addToPlaylistTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/topView"
            android:layout_marginTop="30dp"
            android:text="@string/add_to_playlist"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="ys_display_medium"
            android:textSize="19sp"
            />

        <Button
            android:id="@+id/newPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/addToPlaylistTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="28dp"
            android:text="@string/new_playlist"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/newPlaylistButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>